# ml_journal_summarizer

./: .gitignore  README.md  pyproject.toml
app/: __main__.py
app/config/: config.py
app/llm/: doc_processing.py  openai_access.py
app/model/: extracted_document.py  processed_document.py
app/orchestrator/: scholarly_summary.py
app/util/: scrape_utils.py
